--- a/index.html
+++ b/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>BuzzQuizz</title>
-  <link rel="stylesheet" href="styles/reset.css">
-  <link rel="stylesheet" href="styles/main.css">
-  <link rel="stylesheet" href="styles/ongoing_quizz.css">
-  <link rel="stylesheet" href="styles/new_quizz.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>BuzzQuizz</title>
+    <link rel="stylesheet" href="styles/reset.css">
+    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/ongoing_quizz.css">
+    <link rel="stylesheet" href="styles/new_quizz.css">
 </head>
+
 <body>
-  <h1>hello world</h1>
-  <script src="scripts/main.js"></script>
+    <h1>hello buzz-quiz</h1>
+    <script src="scripts/main.js"></script>
 </body>
+
 </html>
