--- a/index.html
+++ b/index.html
@@ -14,7 +14,13 @@
 
 <body>
     <h1>hello buzz-quiz</h1>
+
+
+    <div class='test'></div>
+    <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
     <script src="scripts/main.js"></script>
 </body>
+
+
 
 </html>
