Move new_quizz code to a new file and Add levels function

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
     <div class='test'></div>
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
+    <script src="scripts/new_quizz.js"></script>
     <script src="scripts/main.js"></script>
 </body>
 
