--- a/index.html
+++ b/index.html
@@ -17,19 +17,27 @@
 </head>
 
 <body>
+
     <div class="main-header">BuzzQuizz</div>
 
     <div class="page-container">
         <div class="home-container">
-            <div class="user-quizzes">
-                <p>Você não criou nenhum<br> quizz ainda :(</p>
-                <button>Criar Quizz</button>
+            <div class="created-quizzes">
+                <div class="empty hidden">
+                    <p>Você não criou nenhum<br> quizz ainda :(</p>
+                    <button onclick="buildNewQuizzPageStart()">Criar Quizz</button>
+                </div>
+                <div class="not-empty">
+                    <p onclick="buildNewQuizzPageStart()" class="section-title">Seus Quizzes<span><ion-icon name="add-circle"></ion-icon></span></p>
+                    <ul class="quizzes-list user-quizzes"></ul>
+                </div>
             </div>
-            <div class="quizzes-list">
-                <p>Todos os Quizzes</p>
-            </div>
+            <p class="section-title">Todos os Quizzes</p>
+
+            <ul class="quizzes-list all-quizzes"></ul>
         </div>
     </div>
+
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="scripts/validation.js"></script>
