--- a/index.html
+++ b/index.html
@@ -11,32 +11,16 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="styles/home.css">
     <link rel="stylesheet" href="styles/ongoing_quizz.css">
     <link rel="stylesheet" href="styles/new_quizz.css">
+    <link rel="stylesheet" href="styles/home.css">
 </head>
 
 <body>
 
     <div class="main-header">BuzzQuizz</div>
 
-    <div class="page-container">
-        <div class="home-container">
-            <div class="created-quizzes">
-                <div class="empty hidden">
-                    <p>Você não criou nenhum<br> quizz ainda :(</p>
-                    <button onclick="buildNewQuizzPageStart()">Criar Quizz</button>
-                </div>
-                <div class="not-empty">
-                    <p onclick="buildNewQuizzPageStart()" class="section-title">Seus Quizzes<span><ion-icon name="add-circle"></ion-icon></span></p>
-                    <ul class="quizzes-list user-quizzes"></ul>
-                </div>
-            </div>
-            <p class="section-title">Todos os Quizzes</p>
-
-            <ul class="quizzes-list all-quizzes"></ul>
-        </div>
-    </div>
+    <div class="page-container"></div>
 
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
