--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="scripts/play_quizz.js"></script>
     <script src="scripts/validation.js"></script>
     <script src="scripts/new_quizz.js"></script>
     <script src="scripts/main.js"></script>
