--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="styles/ongoing_quizz.css">
+    <link rel="stylesheet" href="styles/play_quizz.css">
     <link rel="stylesheet" href="styles/new_quizz.css">
     <link rel="stylesheet" href="styles/home.css">
 </head>
