pulling new implementations on edit and delete

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 
 <body>
 
-    <div class="main-header">BuzzQuizz</div>
+    <div class="main-header">
+        <p onclick="buildHomePage()">BuzzQuizz</p>
+    </div>
 
     <div class="page-container"></div>
 
