project almost done

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
 
     <div class="main-header">
-        <p onclick="buildHomePage()">BuzzQuizz</p>
+        <p onclick="goToHome()">BuzzQuizz</p>
     </div>
 
     <div class="page-container"></div>
